[gd_scene load_steps=8 format=2]

[ext_resource path="res://mirror.gd" type="Script" id=1]
[ext_resource path="res://env_test.tres" type="Environment" id=2]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.03

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
albedo_texture = SubResource( 2 )
metallic = 0.1
roughness = 0.1

[sub_resource type="PlaneMesh" id=4]
size = Vector2( 1, 1 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.5, 0.5, 4 )

[node name="mirror" type="Spatial"]
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1920, 1080 )
hdr = false

[node name="Camera" type="Camera" parent="Viewport"]
transform = Transform( -1, 0, 8.74228e-008, 0, 1, 0, -8.74228e-008, 0, -1, 0, 0, 0 )
environment = ExtResource( 2 )
current = true
fov = 30.0
size = 4.0
far = 0.1

[node name="LineOfSight" type="MeshInstance" parent="Viewport/Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.92446e-008, 0, -0.563293 )
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="MirrorPlane" type="MeshInstance" parent="."]
transform = Transform( -1, -8.74228e-008, -3.82137e-015, 0, -4.37114e-008, 1, -8.74228e-008, 1, 4.37114e-008, 0, 0, 0 )
material_override = SubResource( 3 )
use_in_baked_light = true
mesh = SubResource( 4 )
material/0 = null

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4 )
input_ray_pickable = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 5 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
